--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <div class="lego_wrap">
      
       <!-- 해더GNB -->
-      <header class="header">
-        <nav class="left_gnb">
+      <header>
+        <nav class="gnb">
           <ul>
             <li><a href="#">쇼핑</a></li>
             <li><a href="#">브랜드 소개</a></li>
