fit: new 페이드 효과 넣어야함

--- a/index.html
+++ b/index.html
@@ -135,38 +135,82 @@
           <p class="section_article">레고 신제품을 빠르게 만나보세요!</p>
         </div><!-- section_title_wrap -->
 
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
-              </div>
-              <div class="swiper-slide">
-                <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
-              </div>
-              <div class="swiper-slide">
-                <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
-              </div>
-              <div class="swiper-slide">
-                <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
-              </div>
-              <div class="swiper-slide">
-                <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
-              </div>
-              <div class="swiper-slide">
-                <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
-              </div>
-              <div class="swiper-slide">
-                <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
-              </div>
-              <div class="swiper-slide">
-                <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
-              </div>
-              <div class="swiper-slide">
-                <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
-              </div>
-            </div>
-            <div class="swiper-pagination"></div>
-          </div><!-- swiper mySwiper -->
+        <div class="contents ">
+
+          <div class="scroll-indicator">
+            <span>SCROLL</span>
+            <div class="scroll-line"></div>
+          </div><!-- scroll-indicator -->
+  
+          <div class="swiperA mySwiperA">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                </div>
+              </div>  
+          </div><!-- swiperA -->
+
+          <div class="swiperB mySwiperB">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="title_wrap">
+                    <p class="content_title_xxxsmall">해리포터™ <span>#76466</span></p>
+                    <p class="content_title_large"> <span>01</span>마법사의 돌 – 콜렉터 에디션</p>
+                  </div>
+                  <p class="content_article_medium">
+                    레고® 해리포터™ 25주년 기념판 마법사의 돌 - 콜렉터 에디션(76466) 세트로 해리포터와 <br>
+                    마법사의 돌™ 이야기에 얽힌 추억을 조립해보아요.  호그와트™ 익스프레스의 장엄한 모습과 해리가 <br>
+                    마법사의 돌에 다가가는 중에 5가지 시험을 거치는 과정을 마이크로스 케일의 장면을 통해 <br>
+                    감상해보세요.
+                  </p>
+                  <div class="btn">
+                    VIEW MORE
+                  </div>                
+                </div>
+
+                <div class="swiper-slide">
+                 <div class="title_wrap">
+                    <p class="content_title_xxxsmall">해리포터™ <span>#76466</span></p>
+                    <p class="content_title_large"> <span>02</span>마법사의 돌 – 콜렉터 에디션</p>
+                  </div>
+                  <p class="content_article_medium">
+                    레고® 해리포터™ 25주년 기념판 마법사의 돌 - 콜렉터 에디션(76466) 세트로 해리포터와 <br>
+                    마법사의 돌™ 이야기에 얽힌 추억을 조립해보아요.  호그와트™ 익스프레스의 장엄한 모습과 해리가 <br>
+                    마법사의 돌에 다가가는 중에 5가지 시험을 거치는 과정을 마이크로스 케일의 장면을 통해 <br>
+                    감상해보세요.
+                  </p>
+                  <div class="btn">
+                    VIEW MORE
+                  </div>                
+                </div>
+              </div>  
+          </div><!-- swiperB -->
+
+        </div><!-- contents -->
       </section>
       <!-- section_new -->
 
