--- a/index.html
+++ b/index.html
@@ -156,27 +156,31 @@
                 <div class="swiper-slide">
                   <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
                 </div>
-                <div class="swiper-slide">
-                  <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
-                </div>
               </div>  
           </div><!-- swiperA -->
 
           <div class="swiperB mySwiperB">
               <div class="swiper-wrapper">
 
+                <div class="swiper-slide">
+                 <div class="title_wrap">
+                    <p class="content_title_xxxsmall">해리포터™ <span>#76466</span></p>
+                    <p class="content_title_large"> <span>00</span>마법사의 돌 - 콜렉터 에디션</p>
+                  </div>
+                  <p class="content_article_medium">
+                    레고® 해리포터™ 25주년 기념판 마법사의 돌 - 콜렉터 에디션(76466) 세트로 해리포터와 <br>
+                    마법사의 돌™ 이야기에 얽힌 추억을 조립해보아요. 호그와트™ 익스프레스의 장엄한 모습과 해리가 <br>
+                    마법사의 돌에 다가가는 중에 5가지 시험을 거치는 과정을 마이크로스 케일의 장면을 통해 <br>
+                    감상해보세요.
+                  </p>
+                  <button class="circle_btn">
+                    <div class="icon">
+                      <i class="fa-solid fa-angle-right"></i>
+                       <i class="fa-solid fa-arrow-right"></i>
+                    </div>
+                    <p>VEIW MORE</p>
+                  </button>
+                </div>
                 <div class="swiper-slide">
                  <div class="title_wrap">
                     <p class="content_title_xxxsmall">해리포터™ <span>#76466</span></p>
@@ -237,8 +241,11 @@
 
               </div><!-- swiper-wrapper -->
           </div><!-- swiperB -->
-
+  
         </div><!-- contents -->
+        <button class="round_btn">
+            <p>서비스 영역 살펴보기</p>
+        </button>
       </section>
       <!-- section_new -->
 
@@ -259,6 +266,8 @@
   <!-- js -->
   <script src="js/new.js"></script>
   <script src="js/scrollevent.js"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <!-- lego_wrap -->
   </body>
 </html>
