--- a/index.html
+++ b/index.html
@@ -249,6 +249,8 @@
       </section>
       <!-- section_new -->
 
+
+      <!-- 섹션 시리즈 부분 -->
       <section class="section_series">
         <div class="section_title_wrap">
           <p class="section_title">SERIES</p>
@@ -308,14 +310,20 @@
             <i class="fa-solid fa-plus"></i>
             <p>더 많은 시리즈를 확인하세요!</p>
           </a>
+
         </div><!-- contents -->
-
-
-        
       </section>
       <!-- section_series -->
-      <section class="section_comingsoon"></section>
+
+
+      <!-- 섹션 출시예정 부분 -->
+      <section class="section_comingsoon">
+        .section_subtitle_
+      </section>
       <!-- section_comingsoon -->
+
+
+
       <section class="section_about"></section>
       <!-- section_about -->
       <section class="section_builder"></section>
