--- a/index.html
+++ b/index.html
@@ -320,7 +320,30 @@
       <section class="section_comingsoon">
         <div class="dark-mask"></div>
 
-        .section_subtitle_
+        <div class="section_title_wrap_medium">
+          <p class="content_title_xxlarge">새로운 레고 세트를 찾고 계신가요?</p>
+          <p class="content_article_xlarge"> 제품 페이지에서 선주문이 가능한 날짜를 확인해 달력에 표시해두고 제품을 만날 준비를 해보세요! </p>
+        </div><!-- section_title_wrap -->
+
+        <p>COMING<br>SOON</p>
+
+        <div class="contents">
+
+           <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide" style="background-image: url(https://placekeanu.com/250/g);">1</div>
+              <div class="swiper-slide" style="background-image: url(https://placekeanu.com/260);">2</div>
+              <div class="swiper-slide" style="background-image: url(https://placekeanu.com/270);">3</div>
+              <div class="swiper-slide" style="background-image: url(https://placekeanu.com/270/y);">4</div>
+              <div class="swiper-slide" style="background-image: url(https://placekeanu.com/280/y);">5</div>
+              <div class="swiper-slide" style="background-image: url(https://placekeanu.com/190/y);">6</div>
+              <div class="swiper-slide" style="background-image: url(https://placekeanu.com/300/);">7</div>
+            </div>
+          </div>
+            <a class="round_btn">
+            <p>출시예정 상품 보러가기</p>
+        </a>
+        </div><!-- contents -->
       </section>
       <!-- section_comingsoon -->
 
@@ -339,6 +362,7 @@
   <!-- js -->
   <script src="js/new.js"></script>
   <script src="js/scrollevent.js"></script>
+  <script src="js/comming_soon.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <script src="js/mouse_effects.js"></script>
