--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/comming_soon_swiper.css">
+
     
     <!-- icon -->
     <script src="https://kit.fontawesome.com/4ffb53f389.js" crossorigin="anonymous"></script>
@@ -38,7 +40,6 @@
   </head>
   <body>
     <div class="lego_wrap">
-      
       <!-- 해더GNB -->
       <header>
         <nav class="gnb">
@@ -328,21 +329,38 @@
         <p>COMING<br>SOON</p>
 
         <div class="contents">
-
-           <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide" style="background-image: url(https://placekeanu.com/250/g);">1</div>
-              <div class="swiper-slide" style="background-image: url(https://placekeanu.com/260);">2</div>
-              <div class="swiper-slide" style="background-image: url(https://placekeanu.com/270);">3</div>
-              <div class="swiper-slide" style="background-image: url(https://placekeanu.com/270/y);">4</div>
-              <div class="swiper-slide" style="background-image: url(https://placekeanu.com/280/y);">5</div>
-              <div class="swiper-slide" style="background-image: url(https://placekeanu.com/190/y);">6</div>
-              <div class="swiper-slide" style="background-image: url(https://placekeanu.com/300/);">7</div>
-            </div>
-          </div>
+            <div class="swiper mySwipe coming_soon_slide">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img src="images/comingsoon01.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/comingsoon02.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/comingsoon03.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/comingsoon04.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/comingsoon01.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/comingsoon02.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/comingsoon03.png" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/comingsoon04.png" alt="">
+                  </div>
+                </div>
+              </div><!-- swiper -->
             <a class="round_btn">
-            <p>출시예정 상품 보러가기</p>
-        </a>
+             <p>출시예정 상품 보러가기</p>
+            </a>
+
         </div><!-- contents -->
       </section>
       <!-- section_comingsoon -->
@@ -362,7 +380,7 @@
   <!-- js -->
   <script src="js/new.js"></script>
   <script src="js/scrollevent.js"></script>
-  <script src="js/comming_soon.js"></script>
+  <script src="js/coming_soon.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <script src="js/mouse_effects.js"></script>
