--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
         <div class="section_title_wrap_medium">
           <p class="content_title_xxlarge">새로운 레고 세트를 찾고 계신가요?</p>
-          <p class="content_article_xlarge"> 제품 페이지에서 선주문이 가능한 날짜를 확인해 달력에 표시해두고 제품을 만날 준비를 해보세요! </p>
+          <p class="content_article_xlarge">제품 페이지에서 선주문이 가능한 날짜를 확인해 달력에 표시해두고 제품을 만날 준비를 해보세요!</p>
         </div><!-- section_title_wrap -->
 
         <p>COMING<br>SOON</p>
@@ -367,10 +367,75 @@
 
 
 
-      <section class="section_about"></section>
+      <section class="section_about">
+        <div class="section_title_wrap_medium">
+          <p class="content_title_xxlarge">레고는 내일의 창조자를 영감하고 성장시키는 브랜드입니다</p>
+          <p class="content_article_xlarge">아이들이 LEGO® 브릭을 처음 집어 드는 순간,상상력과 잠재력은 놀랍게 펼쳐지기 시작합니다.</p>
+        </div><!-- section_title_wrap -->
+
+        <div class="contents">
+          <div class="text_wrap">
+            <p>LEGO</p>
+            <div class="line"></div>
+            <div class="article_wrap">
+              <p class="content_title_xxlarge">“ Rebuild the world ”</p>
+              <p class="content_article_xxlarge">“ 세상을 다시 조립하다 ”</p>
+            </div>
+          </div><!-- text_wrap -->
+          <a class="round_btn">
+             <p>출시예정 상품 보러가기</p>
+          </a>
+        </div><!-- contents -->
+      </section>
       <!-- section_about -->
-      <section class="section_builder"></section>
+
+       <!-- 레고 빌더 부분 -->
+      <section class="section_builder">
+        <div class="video_box">
+          <p class="section_title">BULIDER</p>
+          <video controls loop autoplay muted>
+            <source src="video/LEGO_Builder.mp4"></source>
+          </video>
+        </div>
+
+        <div class="contents">
+          <div class="title_wrap">
+            <p class="content_article_xlarge">재미있고 쉽게 LEGO® 세트를 조립하도록 돕는 디지털 조립 설명서 앱이예요!</p>
+            <p class="content_title_xlarge">완전히 새로운 방식으로 조립하세요!</p>
+          </div><!-- title_wrap -->
+          
+          <a class="round_btn">
+             <p>출시예정 상품 보러가기</p>
+          </a><!-- round_btn -->
+
+          <div class="card_list">
+            <div class="card">
+              <img src="images/collection_icon.png" alt="">
+              <p>내 컬렉션</p>
+              <p class="content_article_xsmall">
+                조립한 걸작을 모두 보관하고 정리해 보세요. 컬렉션이 늘어나는 모습을 지켜보세요!
+              </p>
+            </div><!-- card -->
+            <div class="card">
+              <img src="images/chat_icon.png" alt="">
+              <p>함께 조립하기</p>
+              <p class="content_article_xsmall">
+                가족과 친구들과 함께 모여 팀이 되어 멋진 세트를 만들어 보세요!
+              </p>
+            </div><!-- card -->
+            <div class="card">
+              <img src="images/Tools_icon.png" alt="">
+              <p>3D 디지털 설명서</p>
+              <p class="content_article_xsmall">
+                직관적인 3D 지침으로 다음 조립 과정을 안내받으며, 확대/축소 및 회전을 통해 흥미로운 경험을 할 수 있어요.
+              </p>
+            </div><!-- card -->
+          </div>
+        </div><!-- contents -->
+      </section>
       <!-- section_builder -->
+
+
       <section class="section_news"></section>
       <!-- section_news -->
 
