--- a/index.html
+++ b/index.html
@@ -307,10 +307,13 @@
             </div>
           </div><!-- card_list -->
 
-          <a class="plus_btn" href="#">
+          <a class="round_btn">
+             <p>시리즈 더 보러가기</p>
+          </a>
+          <!-- <a class="plus_btn" href="#">
             <i class="fa-solid fa-plus"></i>
             <p>더 많은 시리즈를 확인하세요!</p>
-          </a>
+          </a> -->
 
         </div><!-- contents -->
       </section>
@@ -383,7 +386,7 @@
             </div>
           </div><!-- text_wrap -->
           <a class="round_btn">
-             <p>출시예정 상품 보러가기</p>
+             <p>레고 브랜드 소개 보러가기</p>
           </a>
         </div><!-- contents -->
       </section>
