--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
       <section class="section_builder">
         <div class="video_box">
           <p class="section_title">BULIDER</p>
-          <video controls loop autoplay muted>
+          <video loop autoplay muted>
             <source src="video/LEGO_Builder.mp4"></source>
           </video>
         </div>
@@ -439,10 +439,26 @@
       <!-- section_builder -->
 
 
-      <section class="section_news"></section>
+      <section class="section_news">
+        <p class="section_title">BULIDER</p>
+
+        <div class="slider">
+          <div class="container rot">
+            <div class="card"><div class="slide"></div></div>
+            <div class="card"><div class="slide"></div></div>
+            <div class="card"><div class="slide"></div></div>
+            <div class="card"><div class="slide"></div></div>
+            <div class="card"><div class="slide"></div></div>
+            <div class="card"><div class="slide"></div></div>
+          </div>
+        </div>
+        <div class="footer_thum"></div>
+      </section>
       <!-- section_news -->
 
-      <footer class="footer"></footer>
+      <footer class="footer">
+        
+      </footer>
     </div>
     <div id="cursor"></div>
   <!-- js -->
@@ -450,8 +466,14 @@
   <script src="js/scrollevent.js"></script>
   <script src="js/coming_soon.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/animejs@3.1.0/lib/anime.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <script src="js/mouse_effects.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/animejs@3.1.0/lib/anime.min.js"></script>
+  <script src="js/news.js"></script>
+
+
     <!-- lego_wrap -->
   </body>
+
 </html>
