--- a/index.html
+++ b/index.html
@@ -440,24 +440,140 @@
 
 
       <section class="section_news">
-        <p class="section_title">BULIDER</p>
+        <div class="section_title_wrap">
+          <p class="section_title">NEWS</p>
+          <p class="section_article">레고의 뉴스를 확인하세요!</p>
+        </div><!-- section_title_wrap -->
 
         <div class="slider">
           <div class="container rot">
-            <div class="card"><div class="slide"></div></div>
-            <div class="card"><div class="slide"></div></div>
-            <div class="card"><div class="slide"></div></div>
-            <div class="card"><div class="slide"></div></div>
-            <div class="card"><div class="slide"></div></div>
-            <div class="card"><div class="slide"></div></div>
+            <div class="card"><div class="slide">
+              <div class="text_wrap">
+                <p class="content_article_small">레고 그룹 CEO,</p>
+                <p class="content_article_small">덴마크 '2025 올해의 리더'</p>
+              </div><!-- text_wrap -->
+            </div></div><!-- slide -->
+            <div class="card"><div class="slide">
+              <div class="text_wrap">
+                <p class="content_article_small">LEGO의 새로운</p>
+                <p class="content_article_small">F1 ACADEMY™ 프로젝트</p>
+              </div><!-- text_wrap -->
+            </div></div>
+            <div class="card"><div class="slide">
+              <div class="text_wrap">
+                <p class="content_article_small">레고 × FIFA </p>
+                <p class="content_article_small">2026월드컵, 신규 협업 출범</p>
+              </div><!-- text_wrap -->
+            </div></div>
+            <div class="card"><div class="slide">
+              <div class="text_wrap">
+                <p class="content_article_small"> 모듈러 빌딩 컬렉션</p>
+                <p class="content_article_small">‘레고® 아이콘 쇼핑 스트리트’</p>
+              </div><!-- text_wrap -->
+            </div></div>
+            <div class="card"><div class="slide">
+              <div class="text_wrap">
+                <p class="content_article_small">레고,</p>
+                <p class="content_article_small">최초 포켓몬 세트 공개</p>
+              </div><!-- text_wrap -->
+            </div></div>
+            <div class="card"><div class="slide">
+              <div class="text_wrap">
+                <p class="content_article_large">레고®의<br>더 많은 소식을<br>확인하세요!</p>
+              </div><!-- text_wrap -->
+              
+            </div></div>
           </div>
         </div>
         <div class="footer_thum"></div>
       </section>
       <!-- section_news -->
 
-      <footer class="footer">
-        
+      <footer>
+        <div class="footer_gnb_wrap">
+          <nav class="footer_gnb">
+            <div class="footer_brand_wrap">
+              <h2 class="footer_logo">
+                <a href=".section_banner">
+                  <img src="images/footer_logo.png" alt="로고 이미지">
+                </a>
+              </h2>
+              <a id="location_btn" href="#">
+                <i class="fa-solid fa-location-dot"></i>
+                <p>대한민국</p>
+              </a>
+            </div><!-- footer_brand_wrap -->
+            <ul>
+              <p class="content_article_medium">회사 소개</p>
+              <li><a href="#">레고 그룹 소개</a></li>
+              <li><a href="#">레고 뉴스</a></li>
+              <li><a href="#">레고 소식</a></li>
+              <li><a href="#">지속가능한 사업</a></li>
+              <li><a href="#">공급망 투명성 선언</a></li>
+              <li><a href="#">레고 제품 인증</a></li>
+              <li><a href="#">LEGO 채용정보</a></li>
+              <li><a href="#">LEGO Compliance Line</a></li>
+            </ul>
+            <ul>
+              <p class="content_article_medium">자원</p>
+              <li><a href="#">연락처</a></li>
+              <li><a href="#">부품누락</a></li>
+              <li><a href="#">조립 설명서 찾기</a></li>
+              <li><a href="#">레고 발송 및 배송</a></li>
+              <li><a href="#">레고 반품</a></li>
+              <li><a href="#">결제 방식</a></li>
+              <li><a href="#">이용약관</a></li>
+              <li><a href="#">제품리콜</a></li>
+            </ul>
+          </nav><!-- footer_gnb -->
+  
+          <nav class="right_footer_gnb">
+            <ul>
+              <p class="content_article_medium">명소</p>
+              <li><a href="#">레고하우스</a></li>
+              <li><a href="#">레고랜드 테마파크</a></li>
+              <li><a href="#">레고랜드 디스커버리 센터</a></li>
+            </ul>
+  
+            <ul>
+              <p class="content_article_medium">기타 정보</p>
+              <li><a href="#">LEGO Magazine (무료)</a></li>
+              <li><a href="#">레고 에듀케이션</a></li>
+              <li><a href="#">레고 아이디어스</a></li>
+              <li><a href="#">레고 파운데이션</a></li>
+              <li><a href="#">제휴프로그램</a></li>
+            </ul>
+          </nav><!-- right_footer_gnb -->
+
+        </div><!-- footer_gnb_wrap -->
+        <div class="footer_btm">
+          <div class="footer_connect_wrap">
+            <form class="footer_email_form">
+              <label for="user_email">마케팅 이메일 구독</label>
+              <input type="email" class="user_email" placeholder="이메일 주소">
+              <button type="submit"><i class="fa-solid fa-chevron-right fa-xl"></i></i></button>
+            </form>
+            <div class="sns_wrap">
+              <img src="images/facebook.svg" alt="">
+              <img src="images/x.svg" alt="">
+              <img src="images/instagram.svg" alt="">
+              <img src="images/youtube.svg" alt="">
+            </div>
+          </div><!-- footer_connect_wrap -->
+          <div class="footer_legal_wrap">
+            <nav class="footer_policy_list">
+              <ul>
+                <li><a href="#">개인정보처리방침</a></li>
+                <li><a href="#">쿠키</a></li>
+                <li><a href="#">법적고지</a></li>
+                <li><a href="#">이용약관</a></li>
+                <li><a href="#">접근성</a></li>
+                <li><a href="#">쿠키설정</a></li>
+              </ul>
+              <p>LEGO System A/S, DK-7190 Billund, Denmark. 만 18세 이상부터 온라인 구매가 가능합니다. 레고, 레고 로고, 미니피겨, 듀플로, 프렌즈 로고, 미니피겨 로고, 드림즈, 닌자고, 비디요 및 마인드스톰은 레고 그룹의 상표입니다. ©2025 The LEGO Group. All rights reserved. 이 사이트를 이용하면 이용약관에 동의하는 것으로 간주됩니다. 레고코리아(주) 대표이사 : CLAUS KRISTENSEN(크라우스크리스텐센), 정희영 | 주소 : 서울특별시 강남구 강남대로 382, 메리츠타워 12층 우편번호 06232 사업자등록번호:126-81-25525 | 통신판매업신고 제 2010-서울강남-00549호 사업자등록확인고객센터 무료전화 : 080-880-0166 | 업무시간 : 월요일-금요일 오전9시-오후6시</p>
+            </nav>
+          </div><!-- footer_legal_wrap -->
+        </div><!-- footer_btm -->
       </footer>
     </div>
     <div id="cursor"></div>
