--- a/index.html
+++ b/index.html
@@ -485,24 +485,15 @@
             </div></div>
           </div>
         </div>
-        <div class="footer_thum"></div>
+        <img src="images/footer_thum.png" alt="" class="footer_thum"></img>
       </section>
       <!-- section_news -->
 
       <footer>
+        <div class="footer_top">
+  
         <div class="footer_gnb_wrap">
           <nav class="footer_gnb">
-            <div class="footer_brand_wrap">
-              <h2 class="footer_logo">
-                <a href=".section_banner">
-                  <img src="images/footer_logo.png" alt="로고 이미지">
-                </a>
-              </h2>
-              <a id="location_btn" href="#">
-                <i class="fa-solid fa-location-dot"></i>
-                <p>대한민국</p>
-              </a>
-            </div><!-- footer_brand_wrap -->
             <ul>
               <p class="content_article_medium">회사 소개</p>
               <li><a href="#">레고 그룹 소개</a></li>
@@ -546,21 +537,37 @@
           </nav><!-- right_footer_gnb -->
 
         </div><!-- footer_gnb_wrap -->
+        </div><!-- footer_top -->
+
         <div class="footer_btm">
           <div class="footer_connect_wrap">
             <form class="footer_email_form">
               <label for="user_email">마케팅 이메일 구독</label>
-              <input type="email" class="user_email" placeholder="이메일 주소">
+              <input type="email" id="user_email" placeholder="이메일 주소">
               <button type="submit"><i class="fa-solid fa-chevron-right fa-xl"></i></i></button>
             </form>
-            <div class="sns_wrap">
-              <img src="images/facebook.svg" alt="">
-              <img src="images/x.svg" alt="">
-              <img src="images/instagram.svg" alt="">
-              <img src="images/youtube.svg" alt="">
+            <div class="footer_util">
+              <a id="location_btn" href="#">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <p>대한민국</p>
+              </a>
+              <div class="sns_wrap">
+                <a href="#">
+                  <img src="images/facebook.svg" alt="페이스북아이콘">
+                </a>
+                <a href="#">
+                  <img src="images/x.svg" alt="트위터아이콘">
+                </a>
+                <a href="#">
+                  <img src="images/instagram.svg" alt="인스타그램아이콘">
+                </a>
+                <a href="#">
+                  <img src="images/youtube.svg" alt="유튜브아이콘">
+                </a>
+              </div>
             </div>
           </div><!-- footer_connect_wrap -->
-          <div class="footer_legal_wrap">
+          
             <nav class="footer_policy_list">
               <ul>
                 <li><a href="#">개인정보처리방침</a></li>
@@ -572,7 +579,7 @@
               </ul>
               <p>LEGO System A/S, DK-7190 Billund, Denmark. 만 18세 이상부터 온라인 구매가 가능합니다. 레고, 레고 로고, 미니피겨, 듀플로, 프렌즈 로고, 미니피겨 로고, 드림즈, 닌자고, 비디요 및 마인드스톰은 레고 그룹의 상표입니다. ©2025 The LEGO Group. All rights reserved. 이 사이트를 이용하면 이용약관에 동의하는 것으로 간주됩니다. 레고코리아(주) 대표이사 : CLAUS KRISTENSEN(크라우스크리스텐센), 정희영 | 주소 : 서울특별시 강남구 강남대로 382, 메리츠타워 12층 우편번호 06232 사업자등록번호:126-81-25525 | 통신판매업신고 제 2010-서울강남-00549호 사업자등록확인고객센터 무료전화 : 080-880-0166 | 업무시간 : 월요일-금요일 오전9시-오후6시</p>
             </nav>
-          </div><!-- footer_legal_wrap -->
+         
         </div><!-- footer_btm -->
       </footer>
     </div>
