--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/comming_soon_swiper.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/index_responsive.css">
 
     
     <!-- icon -->
@@ -43,6 +45,7 @@
       <!-- 해더GNB -->
       <header>
         <nav class="gnb">
+          <div class="buger_menu"><i class="fa-solid fa-bars"></i></div>
           <ul>
             <li><a href="#">쇼핑</a></li>
             <li><a href="#">브랜드 소개</a></li>
@@ -145,16 +148,16 @@
           <div class="swiperA mySwiperA">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                  <img src="images/new_card03.jpg" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                  <img src="images/new_card01.jpg" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                  <img src="images/new_card02.jpg" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                  <img src="images/new_card03.jpg" />
                 </div>
               </div>  
           </div><!-- swiperA -->
@@ -202,14 +205,14 @@
                 </div>
                 <div class="swiper-slide">
                  <div class="title_wrap">
-                    <p class="content_title_xxxsmall">해리포터™ <span>#76466</span></p>
-                    <p class="content_title_large"> <span>02</span>마법사의 돌 - 콜렉터 에디션</p>
+                    <p class="content_title_xxxsmall">스타워즈™ <span>#75452</span></p>
+                    <p class="content_title_large"> <span>02</span>BB-8™ 아스트로메크 드로이드</p>
                   </div>
-                  <p class="content_article_medium">
-                    레고® 해리포터™ 25주년 기념판 마법사의 돌 - 콜렉터 에디션(76466) 세트로 해리포터와 <br>
-                    마법사의 돌™ 이야기에 얽힌 추억을 조립해보아요. 호그와트™ 익스프레스의 장엄한 모습과 해리가 <br>
-                    마법사의 돌에 다가가는 중에 5가지 시험을 거치는 과정을 마이크로스 케일의 장면을 통해 <br>
-                    감상해보세요.
+                  <p class="content_article_medium">               
+                    머리가 돌아가는 레고® 스타워즈™ BB-8™ 아스트로메크 드로이드 어린이용 조립 장난감을 <br>
+                    손에 드는 순간 귀여움 게이지가 순식간에 최대치로 치솟는다니까요. <br>
+                    자, 마치 스타워즈: 깨어난 포스™ 영화의 한 장면처럼, 상징적인 드로이드의 모든 디테일을 <br>
+                    레고 브릭으로 실감나게 재현해볼 준비됐나요?<br>
                   </p>
                   <button class="circle_btn">
                     <div class="icon">
