--- a/index.html
+++ b/index.html
@@ -148,16 +148,77 @@
           <div class="swiperA mySwiperA">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="images/new_card03.jpg" />
+                <div class="card"></div>
+                 
                 </div>
                 <div class="swiper-slide">
-                  <img src="images/new_card01.jpg" />
+                   <div class="card">
+                      <div class="swiper-slide-text-box">
+                           <div class="title_wrap">
+                              <p class="content_title_xxxsmall">해리포터™ <span>#76466</span></p>
+                              <p class="content_title_large"> <span>01</span>마법사의 돌 - 콜렉터 에디션</p>
+                            </div>
+                            <p class="content_article_medium">
+                              레고® 해리포터™ 25주년 기념판 마법사의 돌 - 콜렉터 에디션(76466) 세트로 해리포터와 <br>
+                              마법사의 돌™ 이야기에 얽힌 추억을 조립해보아요. 호그와트™ 익스프레스의 장엄한 모습과 해리가 <br>
+                              마법사의 돌에 다가가는 중에 5가지 시험을 거치는 과정을 마이크로스 케일의 장면을 통해 <br>
+                              감상해보세요.
+                            </p>
+                            <button class="circle_btn">
+                              <div class="icon">
+                                <i class="fa-solid fa-angle-right"></i>
+                                <i class="fa-solid fa-arrow-right"></i>
+                              </div>
+                              <p>VEIW MORE</p>
+                            </button>
+                      </div>
+                  </div><!-- card -->
                 </div>
                 <div class="swiper-slide">
-                  <img src="images/new_card02.jpg" />
+                   <div class="card">
+                     <div class="swiper-slide-text-box">
+                        <div class="title_wrap">
+                            <p class="content_title_xxxsmall">스타워즈™ <span>#75452</span></p>
+                            <p class="content_title_large"> <span>02</span>BB-8™ 아스트로메크 드로이드</p>
+                          </div>
+                          <p class="content_article_medium">               
+                            머리가 돌아가는 레고® 스타워즈™ BB-8™ 아스트로메크 드로이드 어린이용 조립 장난감을 <br>
+                            손에 드는 순간 귀여움 게이지가 순식간에 최대치로 치솟는다니까요. <br>
+                            자, 마치 스타워즈: 깨어난 포스™ 영화의 한 장면처럼, 상징적인 드로이드의 모든 디테일을 <br>
+                            레고 브릭으로 실감나게 재현해볼 준비됐나요?<br>
+                          </p>
+                          <button class="circle_btn">
+                            <div class="icon">
+                              <i class="fa-solid fa-angle-right"></i>
+                              <i class="fa-solid fa-arrow-right"></i>
+                            </div>
+                            <p>VEIW MORE</p>
+                          </button>
+                      </div>
+                  </div><!-- card -->
                 </div>
                 <div class="swiper-slide">
-                  <img src="images/new_card03.jpg" />
+                   <div class="card">
+                     <div class="swiper-slide-text-box">
+                          <div class="title_wrap">
+                            <p class="content_title_xxxsmall">해리포터™ <span>#76466</span></p>
+                            <p class="content_title_large"> <span>03</span>마법사의 돌 - 콜렉터 에디션</p>
+                          </div>
+                          <p class="content_article_medium">
+                            레고® 해리포터™ 25주년 기념판 마법사의 돌 - 콜렉터 에디션(76466) 세트로 해리포터와 <br>
+                            마법사의 돌™ 이야기에 얽힌 추억을 조립해보아요. 호그와트™ 익스프레스의 장엄한 모습과 해리가 <br>
+                            마법사의 돌에 다가가는 중에 5가지 시험을 거치는 과정을 마이크로스 케일의 장면을 통해 <br>
+                            감상해보세요.
+                          </p>
+                          <button class="circle_btn">
+                            <div class="icon">
+                              <i class="fa-solid fa-angle-right"></i>
+                              <i class="fa-solid fa-arrow-right"></i>
+                            </div>
+                            <p>VEIW MORE</p>
+                          </button>
+                      </div>
+                  </div><!-- card -->
                 </div>
               </div>  
           </div><!-- swiperA -->
